<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canon"
        app:srcCompat="@drawable/canon_eos_r_body2" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="left|center_vertical"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImage" />

    <TextView
        android:id="@+id/date"
        android:layout_width="195dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="left|center_vertical"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="right|center_vertical"
        android:text="@string/priceofdate"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <ImageButton
        android:id="@+id/addfavs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_addfavs_button"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/addcart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_addcart_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
